		* If you want work using lazy loading with Castle.DynamicProxy2 now you must deploy NHibernate.ByteCode.Castle.dll
		* If you want work using lazy loading with Spring.Aop now you must deploy NHibernate.ByteCode.Spring.dll
		* compatible only with .NET2.0 SP1 or above (System.DateTimeOffset)

	##### Possible Breaking Changes for external frameworks #####
		* ISession interface has additional methods
		* IStatelessSession interface has additional methods
		* DefaultProxyFactoryFactory removed
		* IProxyFactoryFactory now provide the IProxyValidator implementation

	##### Initialization time #####
		* The ProxyValidator check for "internal virtual" (to be intercepted by proxy need "protected internal virtual")
		* The session-factory configuration property "proxyfactory.factory_class" is mandatory; You must choose one of the availables NHibernate.ByteCode

	##### Breaking Changes #####
		* see NH-1633 if you are using SQL native queries
		* CriteriaUtil is gone. NHibernate.Transform.Transformers now returns predefined IResultTransformer.

Build 2.1.0.Alpha2 (rev4167)
========================

** Sub-task
    * [NH-1688] - System.Boolean type incorrectly mapped to YesNoType when the criterion is created by using a projection instead of a property name

** Bug
    * [NH-1635] - <many-to-one formula="select id from..."> should not require a column
    * [NH-1671] - SoftLimitMRUCache has a softReferenceCache which is NOT soft
    * [NH-1693] -  Wrong parameters order in query with subselect and filter
    * [NH-1694] - SQL2005Dialect - Sorting fails on a Formula property containing a comma while using paging (MaxResults)
    * [NH-1700] - union-subclass with same name as abstract superclass causes NHibernate.DuplicateMappingException.
    * [NH-1706] - property-ref does not work for different data type than PK type
    * [NH-1710] - Decimal fields are not create correctly in SQL Server 2005/2008 using SchemaExport